# hist_w2v

./: .get-pip.py.swp  .gitignore  CITATION.cff  README.md  download_and_filter_ngrams.py  lemmatize.py  lowercase.py  pyproject.toml  run.ipynb  setup.py  sort_into_single_file.py  test.jsonl
.ipynb_checkpoints/: 0_workflow-checkpoint.ipynb  0_workflow_OLD-checkpoint.ipynb  0_workflow_multigrams-checkpoint.ipynb  1_download-checkpoint.py  2_convert-checkpoint.py  3_lowercase-checkpoint.py  4_lemmatize-checkpoint.py  5_filter-checkpoint.py  6_combine-checkpoint.py  6_sort-checkpoint.py  7_consolidate-checkpoint.py  7_index-checkpoint.py  README-checkpoint.md  build_vocab-checkpoint.py  check_ngram_lengths-checkpoint.py  consolidate_ngrams-checkpoint.py  download_and_filter_ngrams-checkpoint.py  download_and_filter_ngrams_SLURM-checkpoint.py  index_ngrams-checkpoint.py  jsonl_to_parquet-checkpoint.py  jsonl_to_plain_text-checkpoint.py  lemmatize-checkpoint.py  lowercase-checkpoint.py  make_vocab_list-checkpoint.py  make_weighted_corpus-checkpoint.py  make_yearly_files-checkpoint.py  print_jsonl_lines-checkpoint.py  print_txt_lines-checkpoint.py  remove_short_words-checkpoint.py  remove_stopwords-checkpoint.py  run-Copy1-checkpoint.ipynb  run-checkpoint.ipynb  sort_into_single_file-checkpoint.py  train_word2vec-checkpoint.py  verify_sort-checkpoint.py
notebooks/: evaluation_results.csv  w2g.ipynb  workflow_analyze_change.ipynb  workflow_multigrams.ipynb  workflow_multigrams_X.ipynb  workflow_train_models-gaussian.ipynb  workflow_train_models.ipynb  workflow_unigrams.ipynb  (+1 more)
(+55 files in other folders)
