[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hist_w2v"
version = "0.1.0"
description = "Tools for downloading, processing, and training word2vec models on Google Ngrams"
authors = [
  { name = "Eric D. Knowles", email = "edk202@nyu.edu" }
]
license = { text = "MIT" }
readme = "README.md" 
requires-python = ">=3.7"
keywords = ["nlp", "word2vec", "ngrams", "history"]  # or whatever fits
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "requests>=2.20",
  "tqdm>=4.64",
  "orjson>=3.6",
  "nltk>=3.7",
  "gensim>=4.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

